tests/predicates_invalid/predicates_invalid.exp
Error -------------------------------------------------------------------------------------------------------- a.js:3:48

Invalid destructuring [1] in predicate function. Predicate functions cannot have destructured or spread parameters. This
predicate annotation will be ignored.

   a.js:3:48
   3| export function f({a: b}: {a: mixed}): boolean %checks {
                                                     ^^^^^^^

References:
   a.js:3:19
   3| export function f({a: b}: {a: mixed}): boolean %checks {
                        ^^^^^^^^^^^^^^^^^^ [1]


Error ------------------------------------------------------------------------------------------------------- a.js:10:36

Invalid destructuring [1] in predicate function. Predicate functions cannot have destructured or spread parameters. This
predicate annotation will be ignored.

   a.js:10:36
   10| function g([b]: [number]): boolean %checks {
                                          ^^^^^^^

References:
   a.js:10:12
   10| function g([b]: [number]): boolean %checks {
                  ^^^^^^^^^^^^^ [1]


Error ------------------------------------------------------------------------------------------------------- a.js:14:41

Invalid rest parameter `a` [1] in predicate function. Predicate functions cannot have destructured or spread parameters.
This predicate annotation will be ignored.

   a.js:14:41
   14| function h(...a: Array<mixed>): boolean %checks {
                                               ^^^^^^^

References:
   a.js:14:12
   14| function h(...a: Array<mixed>): boolean %checks {
                  ^^^^^^^^^^^^^^^^^^ [1]


Error ------------------------------------------------------------------------------------------------------- a.js:18:49

Invalid rest parameter `a` [1] in predicate function. Predicate functions cannot have destructured or spread parameters.
This predicate annotation will be ignored.

   a.js:18:49
   18| declare function i(...a: Array<mixed>): boolean %checks(typeof a === 'string');
                                                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   a.js:18:20
   18| declare function i(...a: Array<mixed>): boolean %checks(typeof a === 'string');
                          ^^^^^^^^^^^^^^^^^^ [1]


Error ------------------------------------------------------------------------------------------------------- a.js:20:61

Invalid destructuring [1] in predicate function. Predicate functions cannot have destructured or spread parameters. This
predicate annotation will be ignored.

   a.js:20:61
   20| function j({a: b}: {a: mixed}, ...c: Array<mixed>): boolean %checks {
                                                                   ^^^^^^^

References:
   a.js:20:12
   20| function j({a: b}: {a: mixed}, ...c: Array<mixed>): boolean %checks {
                  ^^^^^^^^^^^^^^^^^^ [1]


Error ------------------------------------------------------------------------------------------------------- a.js:20:61

Invalid rest parameter `c` [1] in predicate function. Predicate functions cannot have destructured or spread parameters.
This predicate annotation will be ignored.

   a.js:20:61
   20| function j({a: b}: {a: mixed}, ...c: Array<mixed>): boolean %checks {
                                                                   ^^^^^^^

References:
   a.js:20:32
   20| function j({a: b}: {a: mixed}, ...c: Array<mixed>): boolean %checks {
                                      ^^^^^^^^^^^^^^^^^^ [1]


Error ------------------------------------------------------------------------------------------------------- a.js:27:49

Invalid rest parameter `x` [1] in predicate function. Predicate functions cannot have destructured or spread parameters.
This predicate annotation will be ignored.

   a.js:27:49
   27| declare function l(...x: Array<mixed>): boolean %checks(typeof x === 'string');
                                                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   a.js:27:20
   27| declare function l(...x: Array<mixed>): boolean %checks(typeof x === 'string');
                          ^^^^^^^^^^^^^^^^^^ [1]


Error ------------------------------------------------------------------------------------------------------- a.js:29:58

Invalid destructuring [1] in predicate function. Predicate functions cannot have destructured or spread parameters. This
predicate annotation will be ignored.

   a.js:29:58
   29| export function m(x: mixed, {a: b}: {a: mixed}): boolean %checks {
                                                                ^^^^^^^

References:
   a.js:29:29
   29| export function m(x: mixed, {a: b}: {a: mixed}): boolean %checks {
                                   ^^^^^^^^^^^^^^^^^^ [1]



Found 8 errors
